--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet">
   
     <title>Gold App</title>
+    <!-- <link rel="icon" type="image" href="./assets/gold.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" /> -->
     <style>
       * {
         font-family: 'Montserrat', sans-serif;
